--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+
+    <meta property="og:title" content="Jables by Hedronium" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Hedronium"/>
+    <meta property="og:url" content="http://www.hedron.link/Jables" />
+    <meta property="og:description" content="Write Database Schema in JSON! (for Laravel5)" />
+    <meta property="og:locale" content="en_US" /> 
+
+    <meta property="og:image" content="http://www.hedron.link/Jables/open_graph.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
   </head>
   <body>
     <section class="page-header">
