--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <meta property="og:title" content="Jables by Hedronium" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Hedronium"/>
-    <meta property="og:url" content="http://www.hedron.link/Jables/" />
+    <meta property="og:site_name" content="Jables by Hedronium"/>
+    <meta property="og:url" content="http://www.hedron.link/Jables" />
     <meta property="og:description" content="Write Database Schema in JSON! (for Laravel5)" />
     <meta property="og:locale" content="en_US" /> 
 
     <meta property="og:image" content="http://www.hedron.link/Jables/open_graph.jpg" />
-    <meta property="og:image:width" content="1191" />
+    <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
   </head>
   <body>
