--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Jables by Hedronium" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Jables by Hedronium"/>
-    <meta property="og:url" content="http://www.hedron.link/Jables" />
+    <meta property="og:url" content="http://www.hedron.link/Jables/" />
     <meta property="og:description" content="Write Database Schema in JSON! (for Laravel5)" />
     <meta property="og:locale" content="en_US" /> 
 
