I am Tired of this

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta property="og:locale" content="en_US" /> 
 
     <meta property="og:image" content="http://www.hedron.link/Jables/images/og.jpg" />
+    <meta property="og:image:width" content="1000" />
+    <meta property="og:image:height" content="525" />
   </head>
   <body>
     <section class="page-header">
