--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Jables</h1>
+      <h1 class="project-name">JABLES</h1>
       <h2 class="project-tagline">Write Database Schema in JSON! (for Laravel5)</h2>
       <a href="https://github.com/Hedronium/Jables" class="btn">View on GitHub</a>
       <a href="https://packagist.org/packages/hedronium/jables" class="btn">View on Packagist</a>
